--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $blue-dark: #2d314d;
-$green-lime: #31d35c;
+$green-lime: rgb(49, 211, 92);
 $cyan-bright: #2bb7da;
-$gray-blue: #9698a6;
+$gray-blue: rgb(150, 152, 166);
 $gray-blue-light: #f3f4f6;
 $gray-extra-light: #fafafa;
